<resources>
    <string name="app_name">Small Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="googleSignInFailed">Google sign in failed</string>
    <string name="firebaseAuthWithGoogle">Firebase Authentication with Google</string>
    <string name="CategoryLabel">Category</string>
    <string name="DateLabel">Date</string>
    <string name="AmountLabel">Amount</string>
    <string name="MemoLabel">Memo</string>
    <string name="TypeLabel">Type</string>
    <string name="BtnSaveLabel">Save</string>
    <string name="firebase_database_reference">users</string>
    <string name="transaction_posted_successfully">Transaction posted successfully!</string>
    <string name="transaction_posting_error">Error posting transaction: </string>
    <string-array name="type_array">
        <item>Expense</item>
        <item>Income</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
